syntax = "proto3";

option go_package = "module/common/authentications";

package authentications;

import "google/api/annotations.proto";

service AuthenticationService{

  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/authentication/login"
      body: "auth"
    };
  }

  rpc Validate(ValidateRequest) returns (ValidateResponse){
    option (google.api.http) = {
      get: "/authentication/validate/{token}"
    };
  }

  rpc Register(RegisterRequest) returns (RegisterResponse){
    option (google.api.http) = {
      post: "/authentication/register"
      body: "auth"
    };
  }

  rpc EditUsername(EditUsernameRequest) returns (EditUsernameResponse){
    option (google.api.http) = {
      put: "/authentication/edit"
      body:"auth"
    };
  }
}

message RegisterRequest{
  Auth auth = 1;
}

message RegisterResponse{
  
}

message LoginRequest {
  Auth auth = 1;
}

message LoginResponse {
  int64 status = 1;
  string error = 2;
  string token = 3;
}

message ValidateRequest{
  string token = 1;
}

message ValidateResponse{
  int64 status = 1;
  string error = 2;
  string user = 3;
}

message EditUsernameRequest{
  Auth auth = 1;
}

message EditUsernameResponse{

}

message Auth{
  string id = 1;
  string username = 2;
  string password = 3;
}


